--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ body {
 }
 
 .h2-1 {
-    padding: 10px 0 20px 0 ;
+    padding: 10px 0 20px 0;
 }
 
 /* HEADER */
@@ -227,4 +227,46 @@ h1 {
     background-color: gray;
     width: 100%;
     height: 300px;
+    border: 1px solid black;
+}
+
+/* FOOTER */
+/* section-1 */
+.footer {
+    background-color: black;
+}
+
+.section-footer {
+    display: flex;
+    padding: 60px 10px 60px 10px;
+    margin-bottom: 10px;
+    gap: 1rem;
+}
+
+.col-footer {
+    width: calc(100% / 5);
+    /* debug */
+    height: 250px;
+    background-color: wheat;
+    border: 1px solid red;
+}
+
+hr {
+    width: 20%;
+    margin: 0 10px;
+}
+
+/* section-2 */
+.language {
+    text-align: left;
+    margin-top: 30px;
+    padding: 30px 10px ;
+}
+
+.select-language {
+    /* debug */
+    width: 100%;
+    height: 40px;
+    border: 1px solid red;
+    background-color: wheat;
 }
