--- a/css/style.css
+++ b/css/style.css
@@ -33,14 +33,27 @@ body {
 }
 
 .h2-1 {
-    padding: 10px 0 20px 0;
+    padding: 10px 0 40px 0;
+    font-size: 1.75rem;
+}
+
+h4 {
+    font-size: 1.3rem;
 }
 
 .btn-blue {
     text-decoration: none;
     color: white;
+    font-size: .8rem;
+}
+
+.btn-blue-hero-main {
     background-color: #0061FF;
-    padding: 5px 10px;
+    height: 35px;
+    width: 230px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /* HEADER */
@@ -80,17 +93,11 @@ nav {
     padding: 20px;
 }
 
-.link-nav-blue {
-    padding-left: 10px;
-}
-
 /* hero */
 .hero {
     background-color: #B4D0E7;
     margin-bottom: 40px;
-    /* debug */
     padding: 100px 50px 0px;
-    border: 1px solid black;
 }
 
 h1 {
@@ -113,6 +120,16 @@ h1 {
     padding-bottom: 20px;
 }
 
+.btn-blue-hero {
+    background-color: #0061FF;
+    height: 30px;
+    width: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 10px;
+}
+
 .p-hero-1 {
     padding-top: 20px;
     padding-bottom: 40px;
@@ -126,36 +143,101 @@ h1 {
     width: 60%;
     position: absolute;
     right: 0;
-    top: 50px;
+    top: 60px;
 }
 
 /* MAIN */
 /* section-1 */
 .input {
-    padding-right: 20px;
+    padding-right: 30px;
 }
 
 .row {
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
+    padding-top: 40px;
 }
 
 .col {
     width: calc(100% / 3 - 2rem / 3);
-    /* debug */
-    background-color: blue;
-    height: 550px;
-    border: 1px solid black;
+    border: 1px solid #ceced1;
+    height: 730px;
+}    
+
+.business-plan {
+    display: flex;
+    justify-content: center;
+    height: 40px;
+    align-items: center;
+}
+
+.hr-main {
+    background: #ceced1;
+    border: #ceced1;
+    height: 1px;
+    margin-bottom: 20px;
+}
+
+.container-2 {
+    padding: 10px;
+    font-size: .8rem;
+}
+
+.p-cost-plan {
+    padding: 10px 0 5px 0;
+}
+
+.p-cost-plan-1 {
+    padding-bottom: 30px;
+    color: #ceced1;
+}
+
+.p-cost-plan-2 {
+    padding-bottom: 10px;
+    font-size: .8rem;
+}
+
+.btn-plan-business {
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.hr-business-plan {
+    background: #ceced1;
+    border: #ceced1;
+    height: 1px;
+    margin: 30px 0;
+    width: 20%;
+}
+
+.h5-main {
+    padding-bottom: 20px;
+    font-size: .9rem;
+}
+
+.check-main {
+    color: #0061FF;
+}
+
+.salient-point {
+    padding-bottom: 10px;
 }
 
 .enterprise {
-    margin: 10px 0;
-    /* debug */
+    margin: 40px 0;
     width: 100%;
-    height: 120px;
-    background-color: blue;
-    border: 1px solid black;
+    height: 230px;
+    border: 1px solid #ceced1;
+}
+
+.flex-enterprise {
+    display: flex;
+    justify-content: space-between;
+}
+
+.contact-sales-office {
+    padding-bottom: 40px;
 }
 
 /* section-2 */
@@ -279,7 +361,7 @@ h1 {
     border: 1px solid red;
 }
 
-hr {
+.hr-footer {
     width: 20%;
     margin: 0 10px;
 }
@@ -288,7 +370,7 @@ hr {
 .language {
     text-align: left;
     margin-top: 30px;
-    padding: 30px 10px ;
+    padding: 30px 10px;
 }
 
 .select-language {
