--- a/css/style.css
+++ b/css/style.css
@@ -56,10 +56,14 @@ h4 {
     justify-content: center;
 }
 
+.btn:hover {
+    filter: brightness(1.25);
+}
+
 /* HEADER */
 /* nav */
 nav {
-    height: 50px;
+    height: 60px;
     background-color: white;
     width: 100%;
     position: fixed;
@@ -83,6 +87,10 @@ nav {
     padding: 10px;
     text-decoration: none;
     color: black;
+}
+
+.padding-left-dropbox-logo {
+    padding-left: 20px;
 }
 
 .nav-right {
@@ -169,7 +177,7 @@ h1 {
 .col {
     width: calc(100% / 3 - 2rem / 3);
     border: 1px solid #ceced1;
-    height: 730px;
+    min-height: 730px;
 }    
 
 .business-plan {
@@ -234,7 +242,7 @@ h1 {
 .enterprise {
     margin: 40px 0;
     width: 100%;
-    height: 230px;
+    min-height: 230px;
     border: 1px solid #ceced1;
 }
 
@@ -320,6 +328,7 @@ h1 {
 
 .brand {
     width: calc(100% / 3);
+    height: 480px;
 }
 
 .row-2 {
@@ -376,6 +385,7 @@ h1 {
 
 .central-card { 
     background-color: #F5F5F5;
+    overflow-y: auto;
 }
 
 .container-3 {
@@ -468,13 +478,16 @@ h1 {
 }
 
 .angle-down {
-    padding-right: 30px;
+    position: absolute;
+    left: 750px;
+    bottom: 0;
 }
 
 .angle-up {
     position: absolute;
-    right: 591px;
-    z-index: -1;
+    left: 750px;
+    bottom: 0;
+    z-index: -1; 
 }
 
 .color-faq:hover .angle-down {
@@ -489,18 +502,17 @@ h1 {
     font-size: .8rem;
 }
 
+.pop-up-faq {
+    position: relative;
+}
+
 .pop-up-faq-1 {
     padding-top: 30px;
     display: none;
-    position: relative;
 }
 
 .color-faq:hover .pop-up-faq-1 {
     display: block;
-}
-
-.padding-angle-down {
-    padding-left: 250px;
 }
 
 .color-faq {
@@ -512,6 +524,7 @@ h1 {
 /* section-1 */
 .footer {
     background-color: black;
+    color: white;
 }
 
 .section-footer {
@@ -523,28 +536,44 @@ h1 {
 
 .col-footer {
     width: calc(100% / 5);
-    /* debug */
-    height: 250px;
-    background-color: wheat;
-    border: 1px solid red;
+}
+
+.titles-footer {
+    padding-bottom: 20px;
+}
+
+.list-footer {
+    list-style-type: none;
+    padding-bottom: 5px;
+}
+
+.connections {
+    text-decoration: none;
+    color: white;
+    font-size: .7rem;
 }
 
 .hr-footer {
-    width: 20%;
+    background: #6F6F6F;
+    border: #6F6F6F;
+    height: 1px;
+    width: 10%;
     margin: 0 10px;
 }
 
 /* section-2 */
 .language {
     text-align: left;
-    margin-top: 30px;
+    margin-top: 20px;
     padding: 30px 10px;
 }
 
 .select-language {
-    /* debug */
     width: 100%;
     height: 40px;
-    border: 1px solid red;
-    background-color: wheat;
+    font-size: .8rem;
+}
+
+.padding-language {
+    padding-right: 5px;
 }
