--- a/css/style.css
+++ b/css/style.css
@@ -338,7 +338,8 @@ h1 {
 
 .col-2 {
     width: calc(100% / 2);
-    height: 240px;
+    height: 240px; 
+    aspect-ratio: 1/1;
     display: flex;
     align-items: center;
     justify-content: center;
